# Engine

./: CMakeLists.txt  Figure.cpp  Figure.h  Light.cpp  Light.h  Line2D.cpp  Line2D.h  Lsystem2D.cpp  Lsystem2D.h  README.md  easy_image.cc  easy_image.h  engine.cc  main.cpp
ini/3d_franctals/: filelist
ini/ambient/: filelist
ini/ambient_light_clipping/: ambient_light_clipping080.ini
ini/clipping/: filelist
ini/diffuse/: filelist
ini/specular/: filelist
ini/spheres_and_cylinders/: filelist
ini/z_buffered_wireframes/: z_buffered_wireframes001.ini  z_buffered_wireframes122.ini
